--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "input-otp": "1.4.1",
     "lenis": "latest",
     "lucide-react": "^0.454.0",
-    "next": "16.0.0",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-day-picker": "9.8.0",
